ch08/apps/golist-frontend/golist-frontend-Service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: golist-frontend
  name: golist-frontend
  namespace: golist
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: golist-frontend
status:
  loadBalancer: {}
